# RPT

./: CMakeLists.txt  README.MD
shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/app/: Application.cpp  Application.h
src/graphics/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/platform/: Window.h  WindowGLFW.cpp
src/ui/: DebugParams.h  DebugUI.cpp  DebugUI.h
